<resources>
    <string name="app_name">Date It Up</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="user_name">User name</string>
    <string name="email_address">E-mail address</string>
    <string name="password_again">Password confirm</string>
    <string name="cancel">Cancle</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="product_description">Termék leírása.</string>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="to_cart">Kosárba</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify\n</string>
    <string name="create_new_date">Create new date</string>
    <string name="price">Price</string>
    <string name="date_name">Date name\n</string>
    <string name="login_as_a_guest">Login as a guest\n</string>
    <string name="date_it_up">Date It Up</string>
    <string name="list_all_dates">List all dates\n</string>
    <string name="log_out">Log out</string>

</resources>
